demo-pod-security-policy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  demo-pod-security-policy

---
apiVersion: v1
kind: Pod
metadata:
  name:      privileged-pod
  namespace: demo-pod-security-policy
spec:
  containers:
    - name:  pause
      image: k8s.gcr.io/pause
      securityContext:
        privileged: true
