pod-test.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  labels:
    app: test
spec:
  containers:
    - name: test
      image: hashicorp/http-echo
      args:
        - "-text=TEST"
        - "-listen=:2020"
