app-test.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  containers:
    - name: test
      image: hashicorp/http-echo
      args:
        - "-text=TEST"
        - "-listen=:2020"

---
kind: Service
apiVersion: v1
metadata:
  name: test-svc
spec:
  selector:
    app: test-app
  ports:
    - port: 2020

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress-nginx
spec:
  rules:
  - host: test.local
    http:
      paths:
      - backend:
          serviceName: test-svc
          servicePort: 2020
